[package]
name = "axdevice_base"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }
# System independent crates provided by ArceOS.
axerrno = "0.1.0"
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axvmconfig = { git = "https://github.com/arceos-hypervisor/axvmconfig.git", default-features = false }
memory_addr = "0.4"
