[package]
name = "axdriver_base"
edition.workspace = true
description = "Common interfaces for all kinds of device drivers"
documentation = "https://docs.rs/axdriver_base"
keywords = ["arceos", "driver"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
