[package]
name = "axdriver_block"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Common traits and types for block storage drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_block"
keywords = ["arceos", "driver", "blk"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
readme = "README.md"

[features]
ramdisk = []
ramdisk-static = []
sdmmc = ["dep:simple-sdmmc"]

[dependencies]
axdriver_base = { version = "0.1.3-preview.1" }
log = { workspace = true }
simple-sdmmc = { version = "0.1", optional = true }
