[package]
name = "axdriver_block"
edition.workspace = true
description = "Common traits and types for block storage drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_block"
keywords = ["arceos", "driver", "blk"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
bcm2835-sdhci = ["dep:bcm2835-sdhci"]
ramdisk = []

[dependencies]
axdriver_base = { workspace = true }
bcm2835-sdhci = { version = "0.1.1", optional = true }
log = { workspace = true }
