[package]
name = "axdriver_net"
edition.workspace = true
version.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Yu Chen <yuchen@tsinghua.edu.cn>"
]
description = "Common traits and types for network device (NIC) drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_net"
keywords = ["arceos", "driver", "nic"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []

[dependencies]
axdriver_base = { version = "0.1.3-preview.1" }
log = { workspace = true }
spin = "0.9"
