[package]
name = "axdriver_net"
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "Common traits and types for network device (NIC) drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_net"
keywords = ["arceos", "driver", "nic"]
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []
ixgbe = ["dep:ixgbe-driver"]
fxmac = ["dep:fxmac_rs"]

[dependencies]
axdriver_base = { workspace = true }
fxmac_rs = { version = "0.2", optional = true }
ixgbe-driver = { version = "0.1.1", optional = true }
log = { workspace = true }
spin = "0.9"
