[package]
name = "axdriver_virtio"
edition.workspace = true
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `axdriver_base` series crates"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_virtio"
keywords = ["arceos", "driver", "vritio"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
alloc = ["virtio-drivers/alloc"]
block = ["axdriver_block"]
gpu = ["alloc", "axdriver_display"]
net = ["alloc", "axdriver_net"]

[dependencies]
axdriver_base = { workspace = true }
axdriver_block = { workspace = true, optional = true }
axdriver_display = { workspace = true, optional = true }
axdriver_net = { workspace = true, optional = true }
log = { workspace = true }
virtio-drivers = { version = "0.7.5", default-features = false }
