[package]
name = "axvisor_api_proc"
version = "0.2.0"
description = "Procedural macros for the `axvisor_api` crate"
keywords = ["axvisor", "api", "embedded", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.1.0"
