[package]
name = "crate_interface_lite"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "Loi Chyan <loichyan@outlook.com>"]
description = "Provides a way to define an interface (trait) in a crate, but can implement or use it in any crate."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/crate_interface"
documentation = "https://docs.rs/crate_interface_lite"
keywords = ["arceos", "api", "macro"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
rust-version = "1.57"
